[package]
name = "jenq"
version = "0.1.1"
authors = ["clux <sszynrae@gmail.com>"]
categories = ["command-line-utilities"]
keywords = ["jenkins", "cli", "terminal", "ci"]
license-file = "LICENSE"
description = "Query jenkins for jobs matching filters"
homepage = "https://github.com/clux/jenq"
readme = "README.md"

[dependencies]
failure = "0.1.3"
jenkins_api = "0.5.1"
clap = "2.32.0"
loggerv = "0.7.1"
log = "0.4.6"
chrono = "0.4.6"
libc = "0.2.44"
openssl-probe = "0.1.2"
